@@ -1,7 +1,2 @@
 <%= f.label field.permitted_attribute %>
-<%= f.collection_select(
-  field.permitted_attribute,
-  field.candidate_records,
-  :id,
-  :to_s,
-) %>
+HasOne relationship forms are not supported yet. Sorry!
